--- a/Resources/Views/Upload/Index.en.resx
+++ b/Resources/Views/Upload/Index.en.resx
@@ -117,8 +117,17 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="BrowseFilesText" xml:space="preserve">
+    <value>Browse files</value>
+  </data>
+  <data name="DragAndDropText" xml:space="preserve">
+    <value>Drag&amp;Drop files</value>
+  </data>
   <data name="MaxSizeText" xml:space="preserve">
     <value>Max size is</value>
+  </data>
+  <data name="OrText" xml:space="preserve">
+    <value>Or</value>
   </data>
   <data name="UploadButtonText" xml:space="preserve">
     <value>Upload</value>
