--- a/Resources/Views/Upload/Index.ru.resx
+++ b/Resources/Views/Upload/Index.ru.resx
@@ -117,8 +117,17 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="BrowseFilesText" xml:space="preserve">
+    <value>Выберете файлы</value>
+  </data>
+  <data name="DragAndDropText" xml:space="preserve">
+    <value>Перетащите файлы</value>
+  </data>
   <data name="MaxSizeText" xml:space="preserve">
     <value>Максимальный размер</value>
+  </data>
+  <data name="OrText" xml:space="preserve">
+    <value>Или</value>
   </data>
   <data name="UploadButtonText" xml:space="preserve">
     <value>Загрузить</value>
